# servitracks

./: .gitignore  ACTION-PLAN.md  AGENTS.md  FULL-AUDIT-REPORT.md  actualizar_base_de_datos.sql  check-wa-tables.mjs  check_convs_and_msgs.mjs  check_latest_messages.mjs  check_rls_policies.mjs  conversations_audit.txt  create-wa-tables.mjs  create_docs_table.mjs  desktop.ini  get_real_tenant.mjs  index.html  migration_ready.sql  package-lock.json  package.json  payload.json  read_audit.mjs  scratch_check_source_tenants.mjs  scratch_count_target_tables.js  test_select.jsx  test_select.tsx  test_webhook.mjs  test_webhook_auth.mjs  tsconfig.json  vercel.json  vite.config.ts
seo-skill/: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  improvements.md  install.ps1  install.sh  pyproject.toml  requirements.txt
seo-skill/.github/: CODEOWNERS  pull_request_template.md
seo-skill/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
seo-skill/.github/workflows/: ci.yml  package-on-tag.yml
seo-skill/tests/: test_content_ai_scripts.py  test_core_seo_scripts.py  test_duplicate_content.py  test_link_and_github_depth_scripts.py  test_pagespeed.py  test_performance_scripts.py  test_readability.py  test_reporting.py  test_schema_local_ecommerce_scripts.py
seo-skill/tests/fixtures/: pagespeed_field_data.json  (+2 more)
seo-skill/wiki/: Audit-Workflow.md  Command-Reference.md  Example-Prompts.md  Home.md  Installation.md  Release-and-Packaging.md  Reports-and-Outputs.md  Script-Inventory.md  Troubleshooting.md  _Sidebar.md
(+181 files in other folders)
